# garage61-race-engineer-mcp

./: .dockerignore  .env.example  Dockerfile  LICENSE  PROJECT_SPECS.md  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: lint-and-format.yml  test.yml  type-check.yml
docs/: PROJECT_SPECS.md  garage61_openapi.json
garage61/: client.py  exceptions.py  models.py
scripts/: seed_static.py
src/garage61/: client.py  constants.py  exceptions.py  models.py
src/utils/: lru_cache.py
static/: cars.json  tracks.json
tests/: conftest.py
tests/garage61/: test_client.py  test_models.py
tests/utils/: test_lru_cache.py
utils/: lru_cache.py
