[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["garage61", "utils"]

[project]
name = "garage61-race-engineer-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.1.0",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv]
# Install the project as a package so scripts in scripts/ can import from garage61
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
